--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
-    <head>
-        <title>imc do Felipe</title>
-    </head>
-    <body>
-        <h1>mundo digital</h1>
-    </body>
+
+<head>
+    <title>imc do Felipe</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <h1>Mundo digital</h1>
+    <p>Aprendendo a programar com o melhor mentor do mundo!!!</p>
+    <button onclick="sayHello()">Uma ação super legal</button>
+    <script src="index.js"></script>
+</body>
+
 </html>
