--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <html>
 
 <head>
-    <title>imc do Felipe</title>
+    <title>Luiz Felipe</title> 
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Mundo digital</h1>
-    <p>Aprendendo a programar com o melhor mentor do mundo!!!</p>
-    <button onclick="sayHello()">Uma ação super legal</button>
-    <script src="index.js"></script>
-</body>
+    <h1> Luiz Felipe Da Silva Brasão</h1> 
+    
+     <img src="photofelipe.jpg" alt="" srcset="" width="350px"> 
 
-</html>
+     <p>Sou um livre sonhador atrás desses sonhos, e não descanso enquanto não encontralos.</p>
