--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
 </head>
 
 <body>
-    <h1> Luiz Felipe Da Silva Brasão</h1> 
+    <h1> Luiz Felipe Da Silva Brasão</h1>  
     
-     <img src="photofelipe.jpg" alt="" srcset="" width="350px"> 
+    <img src="photofelipe.jpg" alt="" srcset="" width="350px"> 
 
-     <p>Sou um livre sonhador atrás desses sonhos, e não descanso enquanto não encontralos.</p>
+    <p>Sou um livre sonhador atrás desses sonhos, e não descanso enquanto não encontralos.</p>
+
+    <a href="https://www.facebook.com/felipe.brasao.3" 
+    <a href="https://www.instagram.com/feliphe_brasao/"<a/>
+
+</body>
+
+</html>
+
