--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <html>
 
 <head>
-    <title>Luiz Felipe</title> 
+    <title>Luiz Felipe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1> Luiz Felipe Da Silva Brasão</h1>  
-    
-    <img src="photofelipe.jpg" alt="" srcset="" width="350px"> 
+    <h1> Luiz Felipe Da Silva Brasão</h1>
 
-    <p>Sou um livre sonhador atrás desses sonhos, e não descanso enquanto não encontralos.</p>
+    <img src="photofelipe.jpg" alt="" srcset="" width="350px">
 
-    <a href="https://www.facebook.com/felipe.brasao.3" 
-    <a href="https://www.instagram.com/feliphe_brasao/"<a/>
+    <p>"<span>S</span>ou um livre sonhador atrás desses sonhos, e não descanso enquanto não encontralos."</p>
+
+    <p>Fale comigo:</p>
+    <a href="https://www.facebook.com/felipe.brasao.3" target="_blank">facebook</a>
+    <a href="https://www.instagram.com/feliphe_brasao/" target="_blank">instagram</a>
 
 </body>
 
 </html>
-
